<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.login.LoginActivity">



    <LinearLayout
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/form_layout"
            android:layout_above="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="Hello"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginBottom="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_til"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_tie"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_til"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_tie"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/forgot_password_tv"
                android:textColor="#AAAAAA"
                android:textSize="14sp"
                android:text="@string/title_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"  app:backgroundTint="#34495E"
                android:id="@+id/login_btn"
                android:layout_marginTop="16dp"
                android:text="@string/title_login"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/TextAppearance.Text.Regular"
                    android:textColor="#AAAAAA"
                    android:textSize="14sp"
                    android:text="@string/title_new_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/link_to_register"
                    android:layout_marginLeft="4dp"
                    style="@style/TextAppearance.Text.Regular"
                    android:textColor="#34495E"
                    android:textSize="14sp"
                    android:text="@string/title_register_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
                android:background="#1E000000"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <LinearLayout
                android:padding="16dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/skip_login_tv"
                    android:layout_weight="1"
                    android:textColor="#AAAAAA"
                    android:textSize="14sp"
                    android:text="@string/title_login_without_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <ImageView
                    app:srcCompat="@drawable/ic_arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>