<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.user.update.UserUpdateActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/profile_layout"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <id.endgame.app.utils.view.CircularImageView
                        android:id="@+id/pic_civ"
                        android:src="@drawable/ic_profile_pic"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                <TextView
                        android:id="@+id/change_pic_tv"
                        android:text="Ganti Foto"
                        style="@style/TextAppearance.Text.Medium"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/form_layout"
                    android:layout_below="@+id/profile_layout"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fullname_til"
                        android:layout_width="match_parent"
                        app:errorEnabled="true"
                        android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullname_tie"
                            android:hint="@string/hint_fullname"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nrp_til"
                        android:layout_width="match_parent"
                        app:errorEnabled="true"
                        android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nrp_tie"
                            android:hint="@string/hint_nrp"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_til"
                        android:layout_width="match_parent"
                        app:errorEnabled="true"
                        android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_tie"
                            android:hint="@string/hint_email"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/birth_place_til"
                        android:layout_width="match_parent"
                        app:errorEnabled="true"
                        android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/birth_place_tie"
                            android:hint="@string/hint_birth_place"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        app:errorEnabled="true"
                        android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/birth_date_tie"
                            android:hint="@string/hint_birth_date"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:focusableInTouchMode="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/gender_spinner"
                        android:prompt="@string/hint_gender"
                        android:entries="@array/gender_array"
                        android:spinnerMode="dialog"
                        android:layout_marginBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"  app:backgroundTint="#34495E"
                        android:id="@+id/submit_btn"
                        android:layout_marginTop="16dp"
                        android:text="@string/title_submit_change_user"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>