<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.user.password.UserPasswordActivity">

    <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_til"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_tie"
                    android:inputType="textPassword"
                    android:hint="@string/hint_new_password"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_new_password_til"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_new_password_tie"
                    android:inputType="textPassword"
                    android:hint="@string/hint_reply_new_password"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"  app:backgroundTint="#34495E"
                android:id="@+id/submit_btn"
                android:layout_marginTop="16dp"
                android:text="@string/title_submit_change_password"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>